feat(api): Add items queries
